@@ -7,6 +7,8 @@ Version 1.3.5+svn:
      variable (bug #9555)
  * miscellaneous and bug fixes
    * various code cleanups
+   * proper handling of description autogeneration for per level [effect] on
+     level 0 units
    * updated the copyright info in the source files also made it explicit
      Wesnoth is GPL 2 only (Wesnoth was already GPL 2 only)
 
